# Laboratorio_No2_GC

./: CMakeLists.txt  Makefile  README.md  run.zsh
include/: SDL2
src/: main.cpp
